# BERP

./: .env.example  .pdm-python  README.md  SSIR_illustration.py  dataset_preprocess.ipynb  environment.yaml  mypy.ini  nohup.out  preprocess_real_recordings.ipynb  pyproject.toml  real_statistics.ipynb  requirements.txt  setup.py  vis_mutual_relatedness.py  visualization.py
assets/occupancy_module/: occupancy_module_CNNprenet.sh  occupancy_module_Gammatone.sh  occupancy_module_MFCC.sh  occupancy_module_Mel.sh
assets/sep_distance_module/: distance_module_CNNprenet.sh  distance_module_Gammatone.sh  distance_module_MFCC.sh  distance_module_Mel.sh
assets/sep_orientation_module/: orientation_module_CNNprenet.sh  orientation_module_Gammatone.sh  orientation_module_MFCC.sh  orientation_module_Mel.sh
assets/sep_rir_module/: rir_module_CNNprenet.sh  rir_module_Gammatone.sh  rir_module_MFCC.sh  rir_module_Mel.sh
assets/sep_volume_module/: volume_module_CNNprenet.sh  volume_module_Gammatone.sh  volume_module_MFCC.sh  volume_module_Mel.sh
assets/unified_module/: unified_module_CNNprenet.sh  unified_module_Gammatone.sh  unified_module_MFCC.sh  unified_module_Mel.sh
configs/: eval.yaml  eval_rap.yaml  inference.yaml  inference_rap.yaml  train.yaml
configs/callbacks/: default_ALconsRegressor.yaml  default_C50Regressor.yaml  default_C80Regressor.yaml  default_D50Regressor.yaml  default_EDTRegressor.yaml  default_STIRegressor.yaml  default_TRRegressor.yaml  default_TsRegressor.yaml  default_distSrcRegressor.yaml  default_jointRegressor.yaml  default_numEstimator.yaml  default_oriSrcRegressor.yaml  default_oriSrcRegressor_woBC.yaml  default_regressor.yaml  default_volumeRegressor.yaml  early_stopping.yaml  learning_rate_monitor.yaml  model_checkpoint.yaml
configs/data/: ReverbSpeech.yaml  ReverbSpeechBUTAlt.yaml  ReverbSpeechBaseline.yaml  ReverbSpeechBaselineMixReal.yaml  ReverbSpeechBaselineReal.yaml  ReverbSpeechBaselineSyn.yaml  ReverbSpeechHybridReal.yaml  ReverbSpeechHybridSyn.yaml  ReverbSpeechJointEst.yaml  ReverbSpeechJointEstE2EMixReal.yaml  ReverbSpeechJointEstE2Eyaml  ReverbSpeechJointEstHybridMixReal.yaml  ReverbSpeechJointEstSim.yaml  ReverbSpeechJointEstSimRAP.yaml  ReverbSpeechRAPMixReal.yaml  ReverbSpeechReal.yaml  ReverbSpeechSyn.yaml
configs/experiment/: example.yaml
configs/hparams_search/: optuna.yaml
configs/logger/: many_loggers.yaml  mlflow.yaml  tensorboard.yaml  wandb.yaml  wandb_ALconsRegressor.yaml  wandb_C50Regressor.yaml  wandb_C80Regressor.yaml  wandb_D50Regressor.yaml  wandb_EDTRegressor.yaml  wandb_STIRegressor.yaml  wandb_TRRegressor.yaml  wandb_TsRegressor.yaml  wandb_distSrcRegressor.yaml  wandb_jointRegressor.yaml  wandb_numEstimator.yaml  wandb_oriSrcRegressor.yaml  wandb_regressor.yaml  wandb_roomEncoder.yaml  wandb_volumeRegressor.yaml
configs/model/: network.yaml  network_baselineCNNMLP.yaml  network_baselineCNNMLP_10params.yaml  network_baselineCRNN.yaml  network_baselineCRNN_10params.yaml  network_baselineFullCNN.yaml  network_baselineFullCNN_10params.yaml  network_baselineREnet.yaml  network_baselineREnet_10params.yaml  network_baselineTAECNN.yaml  network_e2e.yaml  network_e2e_2params.yaml  network_e2e_4params.yaml  network_e2e_6params.yaml  network_hybrid.yaml  network_oriSrc_woBC.yaml  network_roomEncoder.yaml
configs/trainer/: ddp.yaml  default.yaml  gpu.yaml
dataset_preprocess/: dataset_preprocess.py  real_statistics.ipynb
docker/: Dockerfile  Dockerfile-local  requirements.txt
notebook/: dataset_preprocess.ipynb  mix_real_record_preprocess.py
notebooks/: ablation_rir_model.ipynb  dataset_preprocess.ipynb  preprocess_real_recordings.ipynb  rap_jnd_compare.ipynb  sim_rir.ipynb
scripts/: class_label_extractor.py  count_audio_length.py  frame_label_extractor.py  mask_get_librispeech.py  num_acc_per_class.py  obtain_rap.py  preprocess_eval_accu_rap.py  recorded_rir_speech_but.py  recorded_speech_but.py  schedule.sh  synthesize_rir_speech.py  synthesize_sim_rir_speech.py  synthesize_speech.py  synthesize_speech_noise.py  synthesize_speech_noise_uniform.py  synthesize_val_sim_rir_speech.py
src/: eval_C50Regressor.py  eval_D50Regressor.py  eval_EDTRegressor.py  eval_TRRegressor.py  eval_TsRegressor.py  eval_distSrcRegressor.py  eval_jointRegressor.py  eval_numEstimator.py  eval_oriSrcRegressor.py  eval_rap_joint.py  eval_rap_sep.py  eval_regressor.py  eval_volumeRegressor.py  inference_distSrcRegressor.py  inference_jointRegressor.py  inference_numEstimator.py  inference_oriSrcRegressor.py  inference_rap_joint.py  inference_rap_sep.py  inference_regressor.py  inference_volumeRegressor.py  train_ALconsRegressor.py  train_C50Regressor.py  train_C80Regressor.py  train_D50Regressor.py  train_EDTRegressor.py  train_STIRegressor.py  train_TRRegressor.py  train_TsRegressor.py  train_distSrcRegressor.py  train_jointRegressor.py  train_numEstimator.py  train_oriSrcRegressor.py  train_regressor.py  train_volumeRegressor.py
src/callbacks/: ema.py
src/criterions/: e2e_huber_loss.py  e2e_joint_eval_metric.py  e2e_joint_eval_metric_2params.py  e2e_joint_eval_metric_4params.py  e2e_joint_eval_metric_6params.py  e2e_joint_loss.py  e2e_joint_loss_2params.py  e2e_joint_loss_4params.py  e2e_joint_loss_6params.py  huber_loss.py  hybrid_joint_eval_metric.py  hybrid_joint_loss.py  joint_eval_metric.py  label_smmothed_cross_entropy.py  label_smoothed_cross_entropy.py  nll_loss.py  polynomial_see_saw_loss.py  see_saw_loss.py
src/data/: mixed_speech_datamodule.py  reverbSpeech_datamodule_baseline.py  reverbSpeech_datamodule_baseline_mixReal.py  reverbSpeech_datamodule_baseline_real.py  reverbSpeech_datamodule_baseline_syn.py  reverbSpeech_datamodule_joint.py  reverbSpeech_datamodule_joint_e2e.py  reverbSpeech_datamodule_joint_e2e_mixReal.py  reverbSpeech_datamodule_joint_hybrid_mixReal.py  reverbSpeech_datamodule_joint_simrap.py  reverb_speech_datamodule.py  reverb_speech_datamodule_hybrid_real.py  reverb_speech_datamodule_real.py  (+2 more)
tests/: test_datamodules.py  test_eval.py  test_train.py
weights/: weights_download.md  weigths_download.md
(+115 files in other folders)
